--- a/src/02-video.html
+++ b/src/02-video.html
@@ -20,6 +20,6 @@
       allow="autoplay; encrypted-media"
     ></iframe>
 
-    <script type="module" src="./js/02-video.js"></script>
+    <script src="js/02-video.js" type="module"></script>
   </body>
 </html>
