--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -13,7 +13,6 @@
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
-
-    <script src="js/01-gallery.js" type="module"></script>
+    <script type="module" src="./js/01-gallery.js"></script>
   </body>
 </html>
